[gd_scene load_steps=2 format=3 uid="uid://cie422ov1hsg"]

[ext_resource type="Script" uid="uid://bqdbyrpi1qyv6" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="main_menu" type="Node2D"]
position = Vector2(176, 120)
script = ExtResource("1_l6cm7")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonManager"]
layout_mode = 0
offset_right = 93.0
offset_bottom = 66.0

[node name="new_game" type="Button" parent="ButtonManager/VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="load_game" type="Button" parent="ButtonManager/VBoxContainer"]
layout_mode = 2
text = "Load game"

[node name="quit" type="Button" parent="ButtonManager/VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="ButtonManager/VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ButtonManager/VBoxContainer/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="ButtonManager/VBoxContainer/quit" to="." method="_on_quit_pressed"]
